renamed:    math_lang_parser/.gitignore -> math_lang_analyzer/.gitignore 	renamed:    math_lang_parser/Cargo.lock -> math_lang_analyzer/Cargo.lock 	renamed:    math_lang_parser/Cargo.toml -> math_lang_analyzer/Cargo.toml 	new file:   math_lang_analyzer/data/sum.math 	new file:   math_lang_analyzer/src/analyzer.rs 	renamed:    math_lang_parser/src/main.rs -> math_lang_analyzer/src/main.rs 	renamed:    math_lang_parser/src/parsers.rs -> math_lang_analyzer/src/parser.rs 	new file:   math_lang_analyzer/src/symbol_table.rs 	deleted:    math_lang_parser/data/sum.math

--- a/math_lang_analyzer/Cargo.toml
+++ b/math_lang_analyzer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "math_lang_parser"
+name = "math_lang_analyzer"
 version = "0.1.0"
 authors = ["Edwin Baeza <baeza.edwin216@gmail.com>"]
 edition = "2018"
