--- a/math_lang/Cargo.toml
+++ b/math_lang/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "math_lang_analyzer"
+name = "math_lang"
 version = "0.1.0"
 authors = ["Edwin Baeza <baeza.edwin216@gmail.com>"]
 edition = "2018"
